feat: Finish writing tests